[gd_scene load_steps=16 format=3 uid="uid://cdfbk1ajslx5n"]

[ext_resource type="Script" uid="uid://bldgecpaijadh" path="res://scripts/enemies/pelican/pelican.gd" id="1_vtc3j"]
[ext_resource type="Texture2D" uid="uid://ye7skqeiyx2" path="res://assets/sprites/enemies/monsters/pelican/pelican_atk_01.png" id="2_vtc3j"]
[ext_resource type="Texture2D" uid="uid://cu6vjclyiwkma" path="res://assets/sprites/enemies/monsters/pelican/pelican_atk_02.png" id="3_lgxwl"]
[ext_resource type="Texture2D" uid="uid://cqxn1fqbhcmnd" path="res://assets/sprites/enemies/monsters/pelican/pelican_atk_03.png" id="4_k5alk"]
[ext_resource type="Texture2D" uid="uid://5tycfbp7v2jq" path="res://assets/sprites/enemies/monsters/pelican/pelican_01.png" id="5_wjw3j"]
[ext_resource type="Texture2D" uid="uid://bi3l2c1cf6fv3" path="res://assets/sprites/enemies/monsters/pelican/pelican_02.png" id="6_2vqsf"]
[ext_resource type="Texture2D" uid="uid://c7gw2ohvqs17c" path="res://assets/sprites/enemies/monsters/pelican/pelican_03.png" id="7_dipdu"]
[ext_resource type="Texture2D" uid="uid://yquxekuysg1" path="res://assets/sprites/enemies/monsters/pelican/pelican_04.png" id="8_2u7p3"]
[ext_resource type="Script" uid="uid://2dtm6jeegr43" path="res://scripts/utils/node2d_factory.gd" id="9_k5alk"]
[ext_resource type="Script" uid="uid://t1xwug2i503q" path="res://scripts/enemies/seahorse/normal.gd" id="9_lgxwl"]
[ext_resource type="Script" uid="uid://uifmm33yctg8" path="res://scripts/enemies/seahorse/attack.gd" id="10_k5alk"]
[ext_resource type="PackedScene" uid="uid://cv5m0cbxsoolx" path="res://scenes/enemies/sea_urchin.tscn" id="10_wjw3j"]
[ext_resource type="Script" uid="uid://cfggllq5af067" path="res://scripts/enemies/pelican/leave.gd" id="13_2vqsf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t3x06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vtc3j")
}, {
"duration": 1.0,
"texture": ExtResource("3_lgxwl")
}, {
"duration": 1.0,
"texture": ExtResource("4_k5alk")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wjw3j")
}, {
"duration": 1.0,
"texture": ExtResource("6_2vqsf")
}, {
"duration": 1.0,
"texture": ExtResource("7_dipdu")
}, {
"duration": 1.0,
"texture": ExtResource("8_2u7p3")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_emo3g"]
radius = 9.0
height = 32.0

[node name="Pelican" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_vtc3j")
_shoot_time = 0.6
_shoot_interval = 0.6
_attack_cool_down = 2.0
health = 100.0
spike = 120.0
movement_speed = 50.0
gravity = 0.0
metadata/_custom_type_script = "uid://da4xpmamo1d7r"

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_t3x06")
animation = &"normal"

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
target_position = Vector2(28, 0)

[node name="DetectRayCast2D" type="RayCast2D" parent="Direction"]
target_position = Vector2(0, 200)
collision_mask = 60
hit_from_inside = true
collide_with_areas = true

[node name="BulletFactory" type="Marker2D" parent="Direction"]
position = Vector2(8, 13)
script = ExtResource("9_k5alk")
product_packed_scene = ExtResource("10_wjw3j")
target_container_name = &"Bullets"
metadata/_custom_type_script = "uid://2dtm6jeegr43"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_emo3g")

[node name="States" type="Node" parent="."]

[node name="Normal" type="Node" parent="States"]
script = ExtResource("9_lgxwl")
metadata/_custom_type_script = "uid://scb0qkcj5epd"

[node name="Attack" type="Node" parent="States"]
script = ExtResource("10_k5alk")

[node name="Leave" type="Node" parent="States"]
script = ExtResource("13_2vqsf")

[node name="FlyingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="FlyingTimer" to="." method="_on_flying_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
